syntax = "proto3";
import "google/protobuf/any.proto";

message Error {
	string message = 1;
}

message MessageWrapper {
	oneof message {
		HandshakeRequest handshakeRequest = 0;
		HandshakeResponse handshakeResponse = 1;

		ClientPlayerUpdate clientPlayerUpdate = 4;
		ServerPlayerUpdate serverPlayerUpdate = 5;
	}
}

message HandshakeRequest {
	string token = 1;
}

message HandshakeResponse {
	string username = 1;
	int32 userId = 2; // TODO choisir format d'ID (pas forc√©ment string)
	Vector initialPosition = 3;
	float initialRotation = 4; // in radians
}

message ClientPlayerUpdate {
	Status status = 1;
	PlayerMove playerMove = 2;
}

message ServerPlayerUpdate {
	int32 userId = 1;
	Status status = 2;
	PlayerMove playerMove = 3;
}

message PlayerMove {
	Vector position = 1;
	float rotation = 2;
}

message Status {
	float hp = 1;
	float hpMax = 2;
	float speed = 3;
	float force = 4;
}

message Vector {
	float x = 1;
	float y = 2;
}
